src/objects/datapro__Archive_Lead__c.object
<CustomObject>
    <fields>
        <fullName>datapro__Deleted_By__c</fullName>
        <label>Deleted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Deleted_Date__c</fullName>
        <label>Deleted Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Email__c</fullName>
        <label>Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__FuzzyAddress__c</fullName>
        <label>FuzzyAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__FuzzyEmail__c</fullName>
        <label>FuzzyEmail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__FuzzyLeadName__c</fullName>
        <label>FuzzyLeadName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__FuzzyPhone__c</fullName>
        <label>FuzzyPhone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__FuzzyPostCode__c</fullName>
        <label>FuzzyPostCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__Phone__c</fullName>
        <label>Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__Postal_code__c</fullName>
        <label>Postal code</label>
        <type>TextArea</type>
    </fields>
    <label>Archive Lead</label>
    <listViews>
        <fullName>datapro__All</fullName>
        <columns>NAME</columns>
        <columns>datapro__Deleted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Archive Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archive Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>